apps/simple-restapi/envs/qa/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
  namespace: simple-restapi
spec:
  template:
    spec:
      containers:
      - name: webserver-simple
