apps/simple-restapi/envs/qa/ingress.yml
# argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-restapi-ingress
  namespace: simple-restapi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: simple-restapi.local   # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-restapi
            port:
              number: 8080
